fix: correction in button derivative

--- a/src/app/features/products/components/product-card/product-card.component.html
+++ b/src/app/features/products/components/product-card/product-card.component.html
@@ -10,7 +10,7 @@
   <div class="flex justify-between items-center">
     <span class="font-semibold text-lg">{{ formattedPrice() }}</span>
     <button
-      mat-fab
+      mat-icon-button
       [className]="'flex justify-center items-center bg-blue-500 text-white rounded-md p-2 hover:bg-blue-700 transition-all'"
     >
       <mat-icon>shopping_cart</mat-icon>
