feat: add shadow in product card component

--- a/src/app/features/products/components/product-card/product-card.component.html
+++ b/src/app/features/products/components/product-card/product-card.component.html
@@ -1,4 +1,4 @@
-<div class="w-full flex flex-col gap-2 text-xl bg-gray-100 p-3 rounded-md">
+<div class="w-full flex flex-col gap-2 text-xl bg-gray-100 p-3 rounded-md shadow-lg">
   <img
     src="{{ product().image }}"
     alt="{{ product().name }}"
