--- a/src/app/features/products/products.component.html
+++ b/src/app/features/products/products.component.html
@@ -1,5 +1,5 @@
 <div class="w-full flex flex-col gap-14">
-  <div class="relative w-full">
+  <div class="relative w-full" data-aos="fade-down" data-aos-duration="3000">
     <img
       src="images/ui/image-michael-jordan.png"
       alt="michael jordan"
@@ -18,7 +18,11 @@
     </div>
   </div>
 
-  <div class="flex flex-col text-center px-6 gap-3 lg:max-w-5xl lg:mx-auto">
+  <div
+    data-aos="fade-up"
+    data-aos-duration="3000"
+    class="flex flex-col text-center px-6 gap-3 lg:max-w-5xl lg:mx-auto"
+  >
     <h2 class="font-semibold text-2xl">Os melhores em só um lugar</h2>
     <p>
       A marca Jordan na JordanShoes é a escolha certa para os amantes de
